--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ nav ul li a:hover {
     transform: translateY(-50%);
 }
 
+.indent {
+    padding-left: 20px;
+}
+
 h1 {
     color: white;
     margin: 20px;
@@ -74,13 +78,11 @@ h1 {
 h3{
     color: white;
     font-size: 25px;
-    margin: 20px;
 }
 
 h4 {
     color: white;
     font-size: 20px;
-    margin: 20px;
 }
 
 .member {
